crates/vcs-hooks/tests/snapshots/hooks_generator_test__unix__links_git_hooks.snap
---
source: crates/vcs-hooks/tests/hooks_generator_test.rs
expression: "fs::read_to_string(pre_commit).unwrap()"
---
#!/usr/bin/env bash
set -eo pipefail

for (( i=0; i <= $#; i++ )); do
  declare -x "ARG$i"="${!i}"
done

./.moon/hooks/pre-commit.sh $1 $2 $3
